--- a/package.json
+++ b/package.json
@@ -1,1 +1,27 @@
+{
+  "name": "eden-sverige",
+  "private": true,
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "typescript": "5.4.5",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.66",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "tailwindcss": "3.4.4",
+    "postcss": "8.4.35",
+    "autoprefixer": "10.4.19"
+  }
+}
 
